--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
     "lint:fix": "eslint --fix ."
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "1.17.11",
+    "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/drawer": "^6.6.3",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@react-navigation/stack": "^6.3.16",
+    "axios": "^1.5.0",
     "expo": "~48.0.18",
     "expo-checkbox": "~2.3.1",
     "expo-font": "~11.1.1",
