--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-native-screens": "~3.20.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-virtualized-view": "^1.0.0",
+    "react-query": "^3.39.3",
     "validate.js": "^0.13.1"
   },
   "devDependencies": {
