--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "expo-location": "^15.1.1",
     "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
+    "formik": "^2.4.5",
+    "native-base": "^3.4.28",
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-animatable": "^1.3.3",
@@ -43,10 +45,12 @@
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
+    "react-native-svg": "13.4.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-virtualized-view": "^1.0.0",
     "react-query": "^3.39.3",
-    "validate.js": "^0.13.1"
+    "validate.js": "^0.13.1",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
